--- a/app/scss/components/_components.header.scss
+++ b/app/scss/components/_components.header.scss
@@ -6,9 +6,17 @@
   padding: 20px 0 50px;
   position: relative;
 
+  @include mq(md) {
+    padding: 32px 0 27px;
+  }
+
   .delivery {
     position: relative;
     z-index: 9;
+
+    @include mq(s) {
+      display: none;
+    }
   }
 
   &__content {
@@ -18,6 +26,20 @@
       position: absolute;
       top: 112px;
       left: 16.75%;
+
+      @include mq(lg) {
+        left: 7.75%;
+      }
+
+      @include mq(md) {
+        top: 55px;
+        left: 0;
+      }
+
+      @include mq(s) {
+        position: static;
+        text-align: center;
+      }
 
       span {
 
@@ -34,6 +56,20 @@
       top: 81px;
       right: 26.16%;
 
+      @include mq(lg) {
+        right: 23.16%;
+      }
+
+      @include mq(md) {
+        right: 6.16%;
+      }
+
+      @include mq(s) {
+        position: static;
+        text-align: center;
+        margin: 8px auto -15px;
+      }
+
       span {
         display: block;
       }
@@ -43,22 +79,61 @@
       position: relative;
       margin: -5px auto -64px;
 
+      @include mq(s) {
+        margin: 0 auto;
+        width: 81%;
+        min-width: 236px;
+        max-width: 470px;
+      }
+
       figure {
         position: relative;
         z-index: 9;
+
+        img {
+          transition: all 1.5s ease-in-out;
+
+          @include mq(s) {
+            width: 100%;
+          }
+        }
       }
 
-      img.logo {
+      svg {
         position: absolute;
         top: 30.11%;
         left: 50%;
         transform: translateX(-50%);
+
+        @include mq(md) {
+          width: 100%;
+        }
+
+        @include mq(s) {
+          width: 122%;
+          min-width: 290px;
+          top: 34%;
+        }
       }
 
       .sale {
         position: absolute;
         top: 22.1%;
         right: 19.58%;
+
+        @include mq(md) {
+          top: 34.1%;
+        }
+
+        @include mq(s) {
+          top: 23%;
+          right: 10%;
+        }
+
+        @include mq(xs) {
+          top: 7.81%;
+          right: -20px;
+        }
 
         &:before {
           top: -4px;
@@ -82,6 +157,58 @@
       text-align: center;
       color: $pastel-purple;
       margin-top: 17px;
+    }
+
+    &:before, &:after {
+      content: "";
+      display: block;
+      position: absolute;
+    }
+
+    &:before {
+      width: 193px;
+      height: 223px;
+      background: url("../img/header/decor-first.png") no-repeat center/cover;
+      top: 471px;
+      left: -109.57px;
+
+      @include mq(xl) {
+        left: -25.57px;
+      }
+
+      @include mq(md) {
+        width: 129px;
+        height: 148px;
+        left: 0;
+      }
+
+      @include mq(s) {
+        top: 0;
+        left: 0;
+      }
+    }
+
+    &:after {
+      width: 113px;
+      height: 109px;
+      background: url("../img/header/decor-second.png") no-repeat center/cover;
+      top: 7.4px;
+      right: -80.36px;
+
+      @include mq(xl) {
+        right: 0;
+      }
+
+      @include mq(md) {
+        width: 99px;
+        height: 95px;
+        top: 3.4px;
+      }
+
+      @include mq(s) {
+        top: 179.21px;
+        left: 0;
+      }
     }
   }
 
