--- a/app/scss/components/_components.photo.scss
+++ b/app/scss/components/_components.photo.scss
@@ -4,4 +4,26 @@
 
 .photo {
   padding: 85px 0 55px;
+  position: relative;
+  z-index: 9;
+
+  @include mq(md) {
+    padding: 16px 0 31px;
+  }
+
+  &__content {
+
+    &:before {
+      /* скрыть на md */
+      width: 117px;
+      height: 94px;
+      background: url("../img/gallery/decor-second.png") no-repeat center/cover;
+      bottom: -125px;
+      left: 158px;
+
+      @include mq(md) {
+        display: none;
+      }
+    }
+  }
 }
