--- a/app/scss/components/_components.video.scss
+++ b/app/scss/components/_components.video.scss
@@ -5,22 +5,40 @@
 .video {
   padding: 43px 0 383px;
 
+  @include mq(md) {
+    padding: 23px 0 39.41px;
+  }
+
   &__content {
     position: relative;
 
     h3 {
       text-align: left;
       max-width: 418px;
+
+      @include mq(md) {
+        max-width: 100%;
+      }
     }
 
     figure {
       position: absolute;
+
+      @include mq(md) {
+        position: relative;
+      }
 
       &.shoe {
         top: 17px;
         left: -63px;
         z-index: 11;
         pointer-events: none;
+
+        @include mq(md) {
+          top: 0;
+          left: 0;
+          margin: -165px auto -175px;
+        }
 
         &:before {
           content: "";
@@ -47,6 +65,24 @@
 
         @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
           box-shadow: $drop-shadow1;
+        }
+
+        @include mq(xl) {
+          width: 700px;
+          height: 420px;
+          right: 0;
+        }
+
+        @include mq(lg) {
+          width: 550px;
+          height: 330px;
+        }
+
+        @include mq(md) {
+          width: 700px;
+          height: 420px;
+          top: 0;
+          margin: 0 auto;
         }
 
         img {
